index - сверстал третий слайд слайдера

--- a/index.html
+++ b/index.html
@@ -126,40 +126,38 @@
             </div>
           </li>
 
-          <li class="slider-item">
+          <li class="slider-item" id="slide3">
             <h3 class="visually-hidden">Квадрокоптер с лазером модель XXX</h3>
-            <p class="featured-item-image">
-              <a href="catalog-item.html">
-                <img src="img/product-1.jpg" width="111" height="222" alt="Квадрокоптер с лазером  модель XXX">
+            <div class="slider-left-column">
+              <a class="slider-image" href="catalog-item.html">
+                <img src="img/slider-3.png" width="526" height="334" alt="Квадрокоптер с лазером модель XXX">
               </a>
-            </p>
-            <p class="featured-item-number"><span>03</span></p>
-            <a href="catalog-item.html">
-              <p class="featured-item-slogan">Порхает как бабочка,<br>
-                жалит как пчела!
-              </p>
-            </a>
-            <p class="featured-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
-            <a href="catalog-item.html">
-              <span class="button featured-item-button">Подробнее</span>
-            </a>
-            <ul class="slider-pagination-list">
-              <li class="slider-pagination-item"><a href="#"></a></li>
-              <li class="slider-pagination-item"><a href="#"></a></li>
-              <li class="slider-pagination-item pagination-item-current"><a></a></li>
-            </ul>
-            <h4 class="visually-hidden">Основные параметры товара</h4>
-            <table class="slider-table">
-              <tr class="slider-table-head">
-                <td>Дальность полета</td>
-                <td>Радиус поражения</td>
-              </tr>
-              <tr class="slider-table-data">
-                <td>800 м</td>
-                <td>50 м</td>
-              </tr>
-            </table>
+            </div>
+            <div class="slider-right-column">
+              <span class="slider-item-number">03</span>
+              <a href="catalog-item.html">
+                <p class="slider-item-slogan">Порхает как бабочка,<br>
+                  жалит как пчела!
+                </p>
+              </a>
+              <p class="slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+              <a href="catalog-item.html">
+                <span class="button slider-item-button">Подробнее</span>
+              </a>
+              <h4 class="visually-hidden">Основные параметры товара</h4>
+              <table class="slider-table">
+                <tr class="slider-table-head">
+                  <td class="col1">Дальность полета</td>
+                  <td class="col2">Радиус поражения</td>
+                </tr>
+                <tr class="slider-table-data">
+                  <td>800 м</td>
+                  <td>50 м</td>
+                </tr>
+              </table>
+            </div>
           </li>
+          
         </ul>
       </section>
 
