index - добавил переключение слайдов

--- a/index.html
+++ b/index.html
@@ -56,10 +56,13 @@
       <h1 class="visually-hidden">«Device» - интернет-магазин гаджетов</h1>
       <section class="slider">
         <h2 class="visually-hidden">Рекомендуемые товары</h2>
+        <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
+        <input class="visually-hidden" type="radio" id="product-2" name="toggle">
+        <input class="visually-hidden" type="radio" id="product-3" name="toggle">
         <div class="slider-controls">
-          <label for="product-1">Первый</label>
-          <label for="product-2">Второй</label>
-          <label for="product-3">Третий</label>
+          <label for="product-1" aria-label="Первый"></label>
+          <label for="product-2" aria-label="Второй"></label>
+          <label for="product-3" aria-label="Третий"></label>
         </div>
         <ul class="slider-list">
           <li class="slider-item" id="slide1">
@@ -76,7 +79,7 @@
                   как Бен Стиллер!
                 </p>
               </a>
-              <p class="slider-item-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм. </p>
+              <p class="slider-item-description">Самая длинная палка для селфи доступна в нашем магазине.<br>Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм. </p>
               <a href="catalog-item.html">
                 <span class="button slider-item-button">Подробнее</span>
               </a>
@@ -110,7 +113,7 @@
                   правильно!
                 </p>
               </a>
-              <p class="slider-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+              <p class="slider-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы <br>не пропускать занятия и соблюдать диету.</p>
               <a href="catalog-item.html">
                 <span class="button slider-item-button">Подробнее</span>
               </a>
@@ -140,7 +143,7 @@
                   жалит как пчела!
                 </p>
               </a>
-              <p class="slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+              <p class="slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен <br>мощным лазером, замаскированным под стандартную камеру.</p>
               <a href="catalog-item.html">
                 <span class="button slider-item-button">Подробнее</span>
               </a>
@@ -157,7 +160,7 @@
               </table>
             </div>
           </li>
-          
+
         </ul>
       </section>
 
