index - добавил блок меню каталога

--- a/index.html
+++ b/index.html
@@ -167,12 +167,12 @@
       <section class="catalog-menu">
         <h2 class="visually-hidden">Разделы каталога</h2>
         <ul class="catalog-menu-list">
-          <li class="catalog-menu-vr"><a href="catalog-vr.html">Виртуальная реальность</a></li>
-          <li class="catalog-menu-monopods"><a href="catalog-monopods.html">Моноподы для селфи</a></li>
-          <li class="catalog-menu-actioncameras"><a href="catalog-actioncameras.html">Экшн-камеры</a></li>
-          <li class="catalog-menu-fitness"><a href="catalog-fitness.html">Фитнес-браслеты</a></li>
-          <li class="catalog-menu-smartwatches"><a href="catalog-smartwatches.html">Умные часы</a></li>
-          <li class="catalog-menu-quadcopters"><a href="catalog-quadcopters.html">Квадрокоптеры</a></li>
+          <li class="catalog-menu-item catalog-menu-vr"><a href="catalog-vr.html">Виртуальная реальность</a></li>
+          <li class="catalog-menu-item catalog-menu-monopods"><a href="catalog-monopods.html">Моноподы <br>для селфи</a></li>
+          <li class="catalog-menu-item catalog-menu-actioncameras"><a href="catalog-actioncameras.html">Экшн-камеры</a></li>
+          <li class="catalog-menu-item catalog-menu-fitness"><a href="catalog-fitness.html">Фитнес-браслеты</a></li>
+          <li class="catalog-menu-item catalog-menu-smartwatches"><a href="catalog-smartwatches.html">Умные часы</a></li>
+          <li class="catalog-menu-item catalog-menu-quadcopters"><a href="catalog-quadcopters.html">Квадрокоптеры</a></li>
         </ul>
       </section>
 
