index - доработал блок меню каталога

--- a/index.html
+++ b/index.html
@@ -178,25 +178,27 @@
 
       <section class="services">
         <h2 class="visually-hidden">Услуги</h2>
-        <ul class="services-list">
-          <li>
-            <a href="#">
-              <span class="button service-button service-current">Доставка</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <span class="button service-button">Гарантия</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <span class="button service-button">Кредит</span>
-            </a>
-          </li>
-        </ul>
-        <h3 class="service-title">Доставка</h3>
-        <p class="service-description">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+        <div class="services-wrapper">
+          <ul class="services-list">
+            <li>
+              <a href="#">
+                <span class="button service-button service-current">Доставка</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="button service-button">Гарантия</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="button service-button">Кредит</span>
+              </a>
+            </li>
+          </ul>
+          <h3 class="service-title">Доставка</h3>
+          <p class="service-description">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+        </div>
       </section>
 
       <section class="logotypes">
