index - начал делать блок Услуги

--- a/index.html
+++ b/index.html
@@ -52,218 +52,229 @@
         </nav>
     </header>
 
-    <main class="container">
+    <main>
       <h1 class="visually-hidden">«Device» - интернет-магазин гаджетов</h1>
-      <section class="slider">
-        <h2 class="visually-hidden">Рекомендуемые товары</h2>
-        <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
-        <input class="visually-hidden" type="radio" id="product-2" name="toggle">
-        <input class="visually-hidden" type="radio" id="product-3" name="toggle">
-        <div class="slider-controls">
-          <label for="product-1" aria-label="Первый"></label>
-          <label for="product-2" aria-label="Второй"></label>
-          <label for="product-3" aria-label="Третий"></label>
-        </div>
-        <ul class="slider-list">
-          <li class="slider-item" id="slide1">
-            <h3 class="visually-hidden">Длинная палка для селфи модель XXX</h3>
-            <div class="slider-left-column">
-              <a class="slider-image" href="catalog-item.html">
-                <img src="img/slider-1.png" width="384" height="486" alt="Длинная палка для селфи модель XXX">
-              </a>
-            </div>
-            <div class="slider-right-column">
-              <span class="slider-item-number">01</span>
-              <a href="catalog-item.html">
-                <p class="slider-item-slogan">Делай селфи,<br>
-                  как Бен Стиллер!
-                </p>
-              </a>
-              <p class="slider-item-description">Самая длинная палка для селфи доступна в нашем магазине.<br>Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм. </p>
-              <a href="catalog-item.html">
-                <span class="button slider-item-button">Подробнее</span>
-              </a>
-              <h4 class="visually-hidden">Основные параметры товара</h4>
-              <table class="slider-table">
-                <tr class="slider-table-head">
-                  <td class="col1">Длина палки</td>
-                  <td class="col2">Вес палки</td>
-                  <td class="col3">Материал</td>
-                </tr>
-                <tr class="slider-table-data">
-                  <td>8,5 м</td>
-                  <td>5 кг</td>
-                  <td>Карбон</td>
-                </tr>
-              </table>
-            </div>
-          </li>
 
-          <li class="slider-item" id="slide2">
-            <h3 class="visually-hidden">Мотивирующий фитнес-браслет ХХХ</h3>
-            <div class="slider-left-column">
-              <a class="slider-image" href="catalog-item.html">
-                <img src="img/slider-2.png" width="345" height="485" alt="Мотивирующий фитнес-браслет ХХХ">
-              </a>
-            </div>
-            <div class="slider-right-column">
-              <span class="slider-item-number">02</span>
-              <a href="catalog-item.html">
-                <p class="slider-item-slogan">Худеем<br>
-                  правильно!
-                </p>
-              </a>
-              <p class="slider-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы <br>не пропускать занятия и соблюдать диету.</p>
-              <a href="catalog-item.html">
-                <span class="button slider-item-button">Подробнее</span>
-              </a>
-              <h4 class="visually-hidden">Основные параметры товара</h4>
-              <table class="slider-table">
-                <tr class="slider-table-head">
-                  <td class="col1">Без подзарядки</td>
-                </tr>
-                <tr class="slider-table-data">
-                  <td>48 часов</td>
-                </tr>
-              </table>
-            </div>
-          </li>
+      <div class="container">
+        <section class="slider">
+          <h2 class="visually-hidden">Рекомендуемые товары</h2>
+          <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
+          <input class="visually-hidden" type="radio" id="product-2" name="toggle">
+          <input class="visually-hidden" type="radio" id="product-3" name="toggle">
+          <div class="slider-controls">
+            <label for="product-1" aria-label="Первый"></label>
+            <label for="product-2" aria-label="Второй"></label>
+            <label for="product-3" aria-label="Третий"></label>
+          </div>
+          <ul class="slider-list">
+            <li class="slider-item" id="slide1">
+              <h3 class="visually-hidden">Длинная палка для селфи модель XXX</h3>
+              <div class="slider-left-column">
+                <a class="slider-image" href="catalog-item.html">
+                  <img src="img/slider-1.png" width="384" height="486" alt="Длинная палка для селфи модель XXX">
+                </a>
+              </div>
+              <div class="slider-right-column">
+                <span class="slider-item-number">01</span>
+                <a href="catalog-item.html">
+                  <p class="slider-item-slogan">Делай селфи,<br>
+                    как Бен Стиллер!
+                  </p>
+                </a>
+                <p class="slider-item-description">Самая длинная палка для селфи доступна в нашем магазине.<br>Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм. </p>
+                <a href="catalog-item.html">
+                  <span class="button slider-item-button">Подробнее</span>
+                </a>
+                <h4 class="visually-hidden">Основные параметры товара</h4>
+                <table class="slider-table">
+                  <tr class="slider-table-head">
+                    <td class="col1">Длина палки</td>
+                    <td class="col2">Вес палки</td>
+                    <td class="col3">Материал</td>
+                  </tr>
+                  <tr class="slider-table-data">
+                    <td>8,5 м</td>
+                    <td>5 кг</td>
+                    <td>Карбон</td>
+                  </tr>
+                </table>
+              </div>
+            </li>
 
-          <li class="slider-item" id="slide3">
-            <h3 class="visually-hidden">Квадрокоптер с лазером модель XXX</h3>
-            <div class="slider-left-column">
-              <a class="slider-image" href="catalog-item.html">
-                <img src="img/slider-3.png" width="526" height="334" alt="Квадрокоптер с лазером модель XXX">
-              </a>
-            </div>
-            <div class="slider-right-column">
-              <span class="slider-item-number">03</span>
-              <a href="catalog-item.html">
-                <p class="slider-item-slogan">Порхает как бабочка,<br>
-                  жалит как пчела!
-                </p>
-              </a>
-              <p class="slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен <br>мощным лазером, замаскированным под стандартную камеру.</p>
-              <a href="catalog-item.html">
-                <span class="button slider-item-button">Подробнее</span>
-              </a>
-              <h4 class="visually-hidden">Основные параметры товара</h4>
-              <table class="slider-table">
-                <tr class="slider-table-head">
-                  <td class="col1">Дальность полета</td>
-                  <td class="col2">Радиус поражения</td>
-                </tr>
-                <tr class="slider-table-data">
-                  <td>800 м</td>
-                  <td>50 м</td>
-                </tr>
-              </table>
-            </div>
-          </li>
+            <li class="slider-item" id="slide2">
+              <h3 class="visually-hidden">Мотивирующий фитнес-браслет ХХХ</h3>
+              <div class="slider-left-column">
+                <a class="slider-image" href="catalog-item.html">
+                  <img src="img/slider-2.png" width="345" height="485" alt="Мотивирующий фитнес-браслет ХХХ">
+                </a>
+              </div>
+              <div class="slider-right-column">
+                <span class="slider-item-number">02</span>
+                <a href="catalog-item.html">
+                  <p class="slider-item-slogan">Худеем<br>
+                    правильно!
+                  </p>
+                </a>
+                <p class="slider-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы <br>не пропускать занятия и соблюдать диету.</p>
+                <a href="catalog-item.html">
+                  <span class="button slider-item-button">Подробнее</span>
+                </a>
+                <h4 class="visually-hidden">Основные параметры товара</h4>
+                <table class="slider-table">
+                  <tr class="slider-table-head">
+                    <td class="col1">Без подзарядки</td>
+                  </tr>
+                  <tr class="slider-table-data">
+                    <td>48 часов</td>
+                  </tr>
+                </table>
+              </div>
+            </li>
 
-        </ul>
-      </section>
+            <li class="slider-item" id="slide3">
+              <h3 class="visually-hidden">Квадрокоптер с лазером модель XXX</h3>
+              <div class="slider-left-column">
+                <a class="slider-image" href="catalog-item.html">
+                  <img src="img/slider-3.png" width="526" height="334" alt="Квадрокоптер с лазером модель XXX">
+                </a>
+              </div>
+              <div class="slider-right-column">
+                <span class="slider-item-number">03</span>
+                <a href="catalog-item.html">
+                  <p class="slider-item-slogan">Порхает как бабочка,<br>
+                    жалит как пчела!
+                  </p>
+                </a>
+                <p class="slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен <br>мощным лазером, замаскированным под стандартную камеру.</p>
+                <a href="catalog-item.html">
+                  <span class="button slider-item-button">Подробнее</span>
+                </a>
+                <h4 class="visually-hidden">Основные параметры товара</h4>
+                <table class="slider-table">
+                  <tr class="slider-table-head">
+                    <td class="col1">Дальность полета</td>
+                    <td class="col2">Радиус поражения</td>
+                  </tr>
+                  <tr class="slider-table-data">
+                    <td>800 м</td>
+                    <td>50 м</td>
+                  </tr>
+                </table>
+              </div>
+            </li>
 
-      <section class="catalog-menu">
-        <h2 class="visually-hidden">Разделы каталога</h2>
-        <ul class="catalog-menu-list">
-          <li class="catalog-menu-item catalog-menu-vr"><a href="catalog-vr.html">Виртуальная реальность</a></li>
-          <li class="catalog-menu-item catalog-menu-monopods"><a href="catalog-monopods.html">Моноподы <br>для селфи</a></li>
-          <li class="catalog-menu-item catalog-menu-actioncameras"><a href="catalog-actioncameras.html">Экшн-камеры</a></li>
-          <li class="catalog-menu-item catalog-menu-fitness"><a href="catalog-fitness.html">Фитнес-браслеты</a></li>
-          <li class="catalog-menu-item catalog-menu-smartwatches"><a href="catalog-smartwatches.html">Умные часы</a></li>
-          <li class="catalog-menu-item catalog-menu-quadcopters"><a href="catalog-quadcopters.html">Квадрокоптеры</a></li>
-        </ul>
-      </section>
+          </ul>
+        </section>
+
+        <section class="catalog-menu">
+          <h2 class="visually-hidden">Разделы каталога</h2>
+          <ul class="catalog-menu-list">
+            <li class="catalog-menu-item catalog-menu-vr"><a href="catalog-vr.html">Виртуальная реальность</a></li>
+            <li class="catalog-menu-item catalog-menu-monopods"><a href="catalog-monopods.html">Моноподы <br>для селфи</a></li>
+            <li class="catalog-menu-item catalog-menu-actioncameras"><a href="catalog-actioncameras.html">Экшн-камеры</a></li>
+            <li class="catalog-menu-item catalog-menu-fitness"><a href="catalog-fitness.html">Фитнес-браслеты</a></li>
+            <li class="catalog-menu-item catalog-menu-smartwatches"><a href="catalog-smartwatches.html">Умные часы</a></li>
+            <li class="catalog-menu-item catalog-menu-quadcopters"><a href="catalog-quadcopters.html">Квадрокоптеры</a></li>
+          </ul>
+        </section>
+      </div>
 
       <section class="services">
-        <h2 class="visually-hidden">Услуги</h2>
         <div class="services-wrapper">
-          <ul class="services-list">
-            <li>
+          <div class="container">
+            <h2 class="visually-hidden">Услуги</h2>
+            <div class="services-controls">
               <a href="#">
                 <span class="button service-button service-current">Доставка</span>
               </a>
-            </li>
-            <li>
               <a href="#">
                 <span class="button service-button">Гарантия</span>
               </a>
-            </li>
-            <li>
               <a href="#">
                 <span class="button service-button">Кредит</span>
               </a>
-            </li>
-          </ul>
-          <h3 class="service-title">Доставка</h3>
-          <p class="service-description">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+            </div>
+            
+            <ul class="services-list">
+              <li class="services-item">
+                <h3 class="service-title">Доставка</h3>
+                <p class="service-description">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+              </li>
+              <li class="services-item">
+              </li>
+              <li class="services-item">
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
 
-      <section class="logotypes">
-        <h2 class="visually-hidden">Логотипы производителей</h2>
-        <ul class="logotypes-list">
-          <li class="logotypes-item">
-            <a href="#">
-              <img src="img/logotype-1.jpg" width="111" height="222" alt="Логотип DJI">
-            </a>
-          </li>
-          <li class="logotypes-item">
-            <a href="#">
-              <img src="img/logotype-2.jpg" width="111" height="222" alt="Логотип SP Gadgets">
-            </a>
-          </li>
-          <li class="logotypes-item">
-            <a href="#">
-              <img src="img/logotype-3.jpg" width="111" height="222" alt="Логотип GoPro">
-            </a>
-          </li>
-          <li class="logotypes-item">
-            <a href="#">
-              <img src="img/logotype-4.jpg" width="111" height="222" alt="Логотип VIVE">
-            </a>
-          </li>
-        </ul>
-      </section>
-
-      <div class="index-columns">
-        <section class="about-us">
-          <a href="about-us.html">
-            <h2 class="about-us-title">О нас</h2>
-          </a>
-          <p class="about-us-description">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-          <p class="about-us-description">Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями</p>
-          <ul class="transport-list">
-            <li class="transport-item"><a href="#">Деловые Линии</a></li>
-            <li class="transport-item"><a href="#">Автотрейдинг</a></li>
-            <li class="transport-item"><a href="#">ЖелДорЭкспедиция</a></li>
+      <div class="container">
+        <section class="logotypes">
+          <h2 class="visually-hidden">Логотипы производителей</h2>
+          <ul class="logotypes-list">
+            <li class="logotypes-item">
+              <a href="#">
+                <img src="img/logotype-1.jpg" width="111" height="222" alt="Логотип DJI">
+              </a>
+            </li>
+            <li class="logotypes-item">
+              <a href="#">
+                <img src="img/logotype-2.jpg" width="111" height="222" alt="Логотип SP Gadgets">
+              </a>
+            </li>
+            <li class="logotypes-item">
+              <a href="#">
+                <img src="img/logotype-3.jpg" width="111" height="222" alt="Логотип GoPro">
+              </a>
+            </li>
+            <li class="logotypes-item">
+              <a href="#">
+                <img src="img/logotype-4.jpg" width="111" height="222" alt="Логотип VIVE">
+              </a>
+            </li>
           </ul>
-          <p>
-            <a class="button about-us-button" href="about-us.html">
-              Подробнее о нас
-            </a>
-          </p>
         </section>
 
-        <section class="contacts">
-            <a href="contacts.html">
-              <h2 class="contacts-title">Контакты</h2>
+        <div class="index-columns">
+          <section class="about-us">
+            <a href="about-us.html">
+              <h2 class="about-us-title">О нас</h2>
             </a>
-          <p class="contacts-description">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-          <div class="contacts-map">
-            <!-- <iframe src="https://www.google.com/maps/embed?pb=" width="600" height="450" style="border:0" allowfullscreen></iframe> -->
-            <a href="#">
-              <img src="img/map.jpg" width="560" height="222" alt="Карта">
-            </a>
-          </div>
-          <p>
-            <a class="button write-us-button" href="write-us.html">
-              Напишите нам
-            </a>
-          </p>
-        </section>
+            <p class="about-us-description">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+            <p class="about-us-description">Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями</p>
+            <ul class="transport-list">
+              <li class="transport-item"><a href="#">Деловые Линии</a></li>
+              <li class="transport-item"><a href="#">Автотрейдинг</a></li>
+              <li class="transport-item"><a href="#">ЖелДорЭкспедиция</a></li>
+            </ul>
+            <p>
+              <a class="button about-us-button" href="about-us.html">
+                Подробнее о нас
+              </a>
+            </p>
+          </section>
+
+          <section class="contacts">
+              <a href="contacts.html">
+                <h2 class="contacts-title">Контакты</h2>
+              </a>
+            <p class="contacts-description">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+            <div class="contacts-map">
+              <!-- <iframe src="https://www.google.com/maps/embed?pb=" width="600" height="450" style="border:0" allowfullscreen></iframe> -->
+              <a href="#">
+                <img src="img/map.jpg" width="560" height="222" alt="Карта">
+              </a>
+            </div>
+            <p>
+              <a class="button write-us-button" href="write-us.html">
+                Напишите нам
+              </a>
+            </p>
+          </section>
+        </div>
       </div>
+
 
     </main>
 
