index - доделал слайдер услуги

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
               </li>
               <li class="services-item" id="slide-warranty">
                 <h3 class="service-title">Гарантия</h3>
-                <p class="service-description">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+                <p class="service-description">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. <br>Товар, не дом, конечно же.</p>
               </li>
               <li class="services-item" id="slide-credit">
                 <h3 class="service-title">Кредит</h3>
