--- a/index.html
+++ b/index.html
@@ -216,23 +216,27 @@
           <h2 class="visually-hidden">Логотипы производителей</h2>
           <ul class="logotypes-list">
             <li class="logotypes-item">
-              <a href="#">
-                <img src="img/logotype-1.jpg" width="111" height="222" alt="Логотип DJI">
+              <a class="logotypes-link" href="#">
+                <img src="img/logo-1-gray.png" width="260" height="100" alt="Логотип DJI">
+                <img class="color" src="img/logo-1.jpg" width="260" height="100" alt="Логотип DJI">
               </a>
             </li>
             <li class="logotypes-item">
-              <a href="#">
-                <img src="img/logotype-2.jpg" width="111" height="222" alt="Логотип SP Gadgets">
+              <a class="logotypes-link" href="#">
+                <img src="img/logo-2-gray.png" width="260" height="100" alt="Логотип SP Gadgets">
+                <img class="color" src="img/logo-2.jpg" width="260" height="100" alt="Логотип SP Gadgets">
               </a>
             </li>
             <li class="logotypes-item">
-              <a href="#">
-                <img src="img/logotype-3.jpg" width="111" height="222" alt="Логотип GoPro">
+              <a class="logotypes-link" href="#">
+                <img src="img/logo-3-gray.png" width="260" height="100" alt="Логотип GoPro">
+                <img class="color" src="img/logo-3.jpg" width="260" height="100" alt="Логотип GoPro">
               </a>
             </li>
             <li class="logotypes-item">
-              <a href="#">
-                <img src="img/logotype-4.jpg" width="111" height="222" alt="Логотип VIVE">
+              <a class="logotypes-link" href="#">
+                <img src="img/logo-4-gray.png" width="260" height="100" alt="Логотип VIVE">
+                <img class="color" src="img/logo-4.jpg" width="260" height="100" alt="Логотип VIVE">
               </a>
             </li>
           </ul>
