index - верстка нижних блоков

--- a/index.html
+++ b/index.html
@@ -322,11 +322,17 @@
             <div class="column-2">
               <ul class="social-buttons">
                 <li>
-                  <a class="social-button" href="#" aria-label="Фейсбук">
+                  <a class="social-button fb-button" href="#" aria-label="Фейсбук">
                   </a>
                 </li>
-                <li><a class="social-button" href="#" aria-label="Инстаграм"></a></li>
-                <li><a class="social-button" href="#" aria-label="Твиттер"></a></li>
+                <li>
+                  <a class="social-button instagram-button" href="#" aria-label="Инстаграм">
+                  </a>
+                </li>
+                <li>
+                  <a class="social-button twitter-button" href="#" aria-label="Твиттер">
+                  </a>
+                </li>
               </ul>
             </div>
             <div class="column-3">
