index - добавил стиль всплывающих окон

--- a/index.html
+++ b/index.html
@@ -350,16 +350,16 @@
     <section class="modal modal-write-us">
       <h2 class="visually-hidden">Форма письма</h2>
       <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
-        <p>
-          <label class="write-us-label" for="user-name">Ваше имя:</label><br>
+        <p class="write-us-item">
+          <label class="write-us-label" for="user-name">Ваше имя:</label>
           <input class="write-us-name" id="user-name" type="text" name="user-name" placeholder="Имя Фамилия">
         </p>
-        <p>
-          <label class="write-us-label" for="user-email">Ваш e-mail:</label><br>
+        <p class="write-us-item">
+          <label class="write-us-label" for="user-email">Ваш e-mail:</label>
           <input class="write-us-email" id="user-email" type="email" name="user-email" placeholder="email@example.com">
         </p>
-        <p>
-          <label class="write-us-label" for="email-text">Текст письма:</label><br>
+        <p class="write-us-item">
+          <label class="write-us-label" for="email-text">Текст письма:</label>
           <input class="write-us-text" id="email-text" type="text" name="email-text" placeholder="В свободной форме">
         </p>
         <button class="button email-send-button" type="submit">
