--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
             </a>
             <p class="contacts-description">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
             <div class="contacts-map">
-              <!-- <iframe src="https://www.google.com/maps/embed?pb=" width="600" height="450" style="border:0" allowfullscreen></iframe> -->
-              <a href="#">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.112548877993!2d37.52742931610148!3d55.68703098053589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1546180559575" width="560" height="222" style="border:0" allowfullscreen></iframe>
+              <!-- <a href="#">
                 <img src="img/map.jpg" width="560" height="222" alt="Карта">
-              </a>
+              </a> -->
             </div>
             <p>
               <a class="button write-us-button" href="write-us.html">
@@ -337,7 +337,7 @@
             </div>
             <div class="column-3">
               <span class="footer-copyright">
-                <a href="https://htmlacademy.ru/">
+                <a href="https://htmlacademy.ru/intensive/htmlcss">
                   <img src="img/logo-html.svg" width="27" height="35" alt="Логотип HTML Academy">
                 </a>
               </span>
@@ -371,9 +371,10 @@
 
     <section class="modal modal-map">
       <h2 class="visually-hidden">Как до нас добраться</h2>
-      <p>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.112548877993!2d37.52742931610148!3d55.68703098053589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1546180559575" width="960" height="559" style="border:0" ></iframe>
+      <!-- <p>
         <img src="img/map-big.jpg" width="960" height="559" alt="Офис компании по адресу ул. Строителей, 15, Москва">
-      </p>
+      </p> -->
       <button class="modal-close" type="button" aria-label="Закрыть"></button>
     </section>
 
